// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render with actived style 1`] = `
<button
  class="css-68lmnf"
>
  My button
</button>
`;

exports[`<Button /> should render with default style 1`] = `
<button
  class="css-1k3qov9"
>
  My button
</button>
`;
